--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Facebook Login JavaScript Example</title>
 	<meta charset="UTF-8">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="FuNights/includes/main.js"></script>
+	<script src="includes/main.js"></script>
 	<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 </head>
 <body>
