--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ $(document).on(
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
-    window.location.assign("FuNights/main.html");
+    window.location.assign("main.html");
   }
 </script>
 
