--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	 	<title>FuNights</title>
+	 	<title>FuNights site</title>
 		<meta charset="UTF-8">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
