--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
 				<a id="logo" href="#"> </a>
  			</header>		
 		 	<nav class="navColor">
-		 		<div id="menu">
+		 		<div id="navBar">
 			 		<ul>	
 						<li><a class="aNav" href="#">קרובים קרובים</a></li>
 						<li><a class="aNav" href="stylelist.html">Specials</a></li>
