--- a/main.html
+++ b/main.html
@@ -58,8 +58,7 @@
 			<header> 
 				<a id="logo" href="#"> </a>
  			</header>		
-		 	<nav class="navColor">
-		 		<div id="navBar">
+		 		<nav id="cssmenu">
 			 		<ul>	
 						<li><a class="aNav" href="#">קרובים קרובים</a></li>
 						<li><a class="aNav" href="stylelist.html">Specials</a></li>
@@ -68,8 +67,8 @@
 						<li><a class="aNav" href="abouts.html">קצת עלינו..</a></li>
 			 		</ul>
 			 		<span></span>
-		 		</div>
-			</nav>
+		 		</nav>
+
 			 <main>
 			 	<h1>קרובים קרובים</h1>
 			 	
