--- a/main.html
+++ b/main.html
@@ -59,16 +59,15 @@
 				<a id="logo" href="#"> </a>
  			</header>		
 		 		<nav id="cssmenu">
-			 		<ul>	
-						<li><a class="aNav" href="#">קרובים קרובים</a></li>
-						<li><a class="aNav" href="stylelist.html">Specials</a></li>
-						<li><a class="aNav" href="#">העמוד שלי</a></li>
-						<li><a class="aNav" href="form.html">הוספת מקום</a></li>
-						<li><a class="aNav" href="abouts.html">קצת עלינו..</a></li>
-			 		</ul>
+					<ul>
+					   <li class='active'><a href='#'><span>קרובים קרובים</span></a></li>
+					   <li><a href='add.php'><span>הוסף מקום</span></a></li>
+					   <li><a href='#'><span>Specials</span></a></li>
+					    <li><a href='#'><span>העמוד שלי</span></a></li>
+					   <li class='last'><a href='#'><span>קצת עלינו</span></a></li>
+					</ul>
 			 		<span></span>
 		 		</nav>
-
 			 <main>
 			 	<h1>קרובים קרובים</h1>
 			 	
