--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 		<!-- <script src="FuNights/includes/dragAndDrop.js"></script> -->
 		<script src="includes/main.js"></script>
 		<link rel="stylesheet" href="includes/style.css">
+		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
 	</head>
 	<body>	 
