--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
 
                  -->
 				<h3><%= item.get("name") %></h3>
-                <img class="placeImage" src="<%= item.imageUrl %>"/>
+                <img class="placePic" src="<%= item.imageUrl %>"/>
 			</div>
 			
 	        <% }); %>
@@ -86,9 +86,7 @@
 				</div>
 				
 				<h1 class="pageName">קרובים קרובים</h1>
-				<div class= "covers">
 
-     		   </div>
 
 			 </main>
 			 
