--- a/add.html
+++ b/add.html
@@ -46,7 +46,7 @@
 		
 		<div id="wrapper"> 
 			<header> 
-				<a id="logo" href="#"> </a>
+				<a id="logo" href="main.html"> </a>
  			</header>		
 		 	<nav id="cssmenu">
 					<ul>
