--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<select class="fil" id="filterType" onchange="onChangeFilter()">
 				<div class="filter"></div>
 				
-					<option value="0">סנן לפי סוג</option>
+					<option value="0">▼ סנן לפי סוג</option>
 					<% _.each(items,function(item,key,list){ 
 			            // create more variables
 			        %>
@@ -32,7 +32,7 @@
 		<script type="text/html" id='filterMusicList'>
 			<select class="fil" id="filterType" onchange="onChangeFilter()">
 				
-				<option value="0">סנן לפי מוסיקה</option>
+				<option value="0">▼ סנן לפי מוסיקה</option>
 				<% _.each(items,function(item,key,list){ 
 		            // create more variables
 		        %>
