--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
-		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
-		<script src="http://underscorejs.org/underscore.js"></script>
+		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
+		<script src="http://underscorejs.org/underscore.js" defer></script>
 		<script src="includes/main.js"></script>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
