Adding placePage and populate it with data. still need design. fix add new place.

--- a/add.html
+++ b/add.html
@@ -69,8 +69,8 @@
 							<div><label class="categoryP">כתובת:	</label><input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required></input></div><br>
 						</div>
 						<div class= "leftSideForm">
-							<div><label class="categoryP">תיאור:	</label><textarea id="i3" name="description" rows="5" cols="20"></textarea></div>
-							<div><label class="categoryP">תמונה:</label><input id="upload" type="file" name="image" required=""><div id="fileDisplayArea"></div></div>
+							<div><label class="categoryP">תיאור:	</label><textarea id="i3" name="description" rows="5" cols="20" required></textarea></div>
+							<div><label class="categoryP">תמונה:</label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
 							<div><label class="categoryP">&nbsp;</label><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
 						</div>
 					</form>
