--- a/index.html
+++ b/index.html
@@ -70,7 +70,19 @@ $(document).on(
   // Here we run a very simple test of the Graph API after login is
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
-    window.location.assign("main.html");
+  	FB.api('/me', function(response) {
+      Parse.User.current().save({
+        displayName: response.name
+      },
+      {
+        success: function(gameTurnAgain) {
+    	    window.location.assign("main.html");
+            // update ui
+        },
+        error: function(gameTurnAgain, error) {
+            // update ui
+        }
+      });
   }
 </script>
 
