--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $(document).on(
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email" onlogin="login();">
 </fb:login-button>
 
 <div id="status">
