--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ $(document).on(
 		            } else {
 		                alert("User logged in through Facebook!");
 		            }
+		            testAPI();
 		        },
 		        error: function(user, error) {
 		            alert("User cancelled the Facebook login or did not fully authorize.");
