--- a/placePage.html
+++ b/placePage.html
@@ -66,7 +66,7 @@
 
 			 </main>
 		 
-		 	<script src="includes/mypage.js"></script>
+		 	<script src="includes/place.js"></script>
 
 	</body>
 </html>
