--- a/placePage.html
+++ b/placePage.html
@@ -60,7 +60,7 @@
 					<option> בחר תגית ▼</option>
 					</select>
 		<!--		<input onclick="checkIn()" >         -->
-					<div><label class="categoryP">תמונה:</label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
+					<div><label class="categoryP"></label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
 					<div><label class="categoryP">&nbsp;</label><input onclick="addPlacePic()" type="submit" name="btn" class="addBtn" value="+הוסף"></div>
 				</div>
 			
