--- a/placePage.html
+++ b/placePage.html
@@ -42,7 +42,7 @@
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
 					   <li><a href='#'><span>Specials</span></a></li>
-					   <li><a href='#'><span>העמוד שלי</span></a></li>
+					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
 			 		<span></span>
@@ -59,7 +59,8 @@
 					<select class="fil" id="chooseTag">
 					<option> בחר תגית ▼</option>
 					</select>
-		<!--		<input onclick="checkIn()" >         -->
+					<div><label class="categoryP">&nbsp;</label><input onclick="checkIn()" type="submit" name="btn" class="addBtn" value="checkin"></div>
+
 					<div><label class="categoryP"></label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
 					<div><label class="categoryP">&nbsp;</label><input onclick="addPlacePic()" type="submit" name="btn" class="addBtn" value="+הוסף"></div>
 				</div>
