--- a/placePage.html
+++ b/placePage.html
@@ -54,7 +54,7 @@
 					<div id="placePagePic"></div>
 					<p id="description"></p>
 					<div id="tags"></div>
-					<select class="fil" id="chooseTag">
+					<select class="fil" id="chooseTag" onchange="addTag(this)">
 					<option> בחר תגית ▼</option>
 					</select>
 					<div><label class="categoryP"></label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
