--- a/placePage.html
+++ b/placePage.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
+		<link rel="stylesheet" href="includes/tagsStyle.css">
 	</head>
 	<body>	 
 		
