--- a/placePage.html
+++ b/placePage.html
@@ -52,16 +52,15 @@
 				<div id="placeTarget">
 					<h1 id="placePageName"></h1>
 					<h3 id="placePageType"></h3>
+					<div><input onclick="checkIn()" type="submit" name="btn" class="checkInBTN" value=" I'm Here "></div>
 					<div id="placePagePic"></div>
 					<p id="description"></p>
-					<div id="tags"></div>
-					<select class="fil" id="chooseTag" onchange="addTag(this)">
-					</select>
 					<form method="post" id="add-image">
 						<div><label class="categoryP"></label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
 						<div><label class="categoryP">&nbsp;</label><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
-						<div><input onclick="checkIn()" type="submit" name="btn" class="checkInBTN" value=""></div>
 					</form>
+					<select class="filterTags" id="chooseTag" onchange="addTag(this)"></select>
+					<div id="tags"></div>
 				</div>
 				
 				
