--- a/placePage.html
+++ b/placePage.html
@@ -97,7 +97,7 @@
 					    <input type="radio" id="star2" name="rating" value="2" onclick="rate()"/><label for="star2" title="Kinda bad">2 stars</label>
 					    <input type="radio" id="star1" name="rating" value="1" onclick="rate()"/><label for="star1" title="Sucks big time">1 star</label>
 					</fieldset>
-					<div class="currentRating">דירוג נוכחי</div>
+					<div class="currentRating">דירוג נוכחי:</div>
 				</div>
 					
 				<!--
