--- a/main.html
+++ b/main.html
@@ -66,6 +66,10 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="#"> </a>
+				<div id= "user">
+					
+					<button class="exit-btn">Log Out</button>
+				</div>
  			</header>		
 		 		<nav id="cssmenu">
 					<ul>
@@ -88,7 +92,7 @@
 				<aside class="indexAside">
 					<h3>המבוקש</h3>
 				</aside>
-				<div id="target"></div>
+				<div id="target" class="crop"></div>
 			 </main>
 		 
  		<script src="includes/parse_main.js"></script>
