--- a/main.html
+++ b/main.html
@@ -68,7 +68,9 @@
 				<a id="logo" href="#"> </a>
 				<div id= "user">
 					
-					<button class="exit-btn">Log Out</button>
+					<button class="exit-btn"    FB.logout(function(response) {
+        // Person is now logged out
+    });>Log Out</button>
 				</div>
  			</header>		
 		 		<nav id="cssmenu">
