--- a/main.html
+++ b/main.html
@@ -70,12 +70,12 @@
 				<script>
 				function logout(){
 					FB.logout(function(response){
-						alert('Youe are log out');
+						alert('Youre are log out');
 					});
 				}
 					
 				</script>					
-					<button class="exit-btn" onclick="logout()">Log Out</button>
+					<button class="exit-btn" onclick="logout();">Log Out</button>
 					<div class="myName"></div>
 				</div>
  			</header>		
