--- a/index1.html
+++ b/index1.html
@@ -97,6 +97,7 @@
 
 <div id="status">
 </div>
-
+	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+	</fb:login-button>
 </body>
 </html>
