--- a/index1.html
+++ b/index1.html
@@ -14,6 +14,40 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <script>
+
+$(document).on(
+    'fbload',  //  <---- HERE'S OUR CUSTOM EVENT BEING LISTENED FOR
+    function(){
+    	var currentUser = Parse.User.current();
+    	if (currentUser){
+    		window.location.assign("main.html");
+    	}
+	    $("#fblogin").on("click", function(){
+	    	Parse.FacebookUtils.logIn(null, {
+		        success: function(user) {
+		            if (!user.existed()) {
+		                alert("User signed up and logged in through Facebook!");
+		            } else {
+		                alert("User logged in through Facebook!");
+		            }
+		            testAPI();
+		        },
+		        error: function(user, error) {
+		            alert("User cancelled the Facebook login or did not fully authorize.");
+		        }
+		    });
+	        //some code that requires the FB object
+	        // FB.getLoginStatus(function(response) {
+		    // statusChangeCallback(response);
+		  // });
+
+    });
+});
+  
+
+</script>
+
+
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
@@ -90,6 +124,7 @@
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
+        
     });
   }
 </script>
@@ -99,6 +134,7 @@
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
+<button id="fblogin">facebook</button>
 
 <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="true" data-scope="basic_info,email,public_info"></div>
 
