--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
 				</div>
 				
 				<h1 class="pageName">קרובים קרובים</h1>
-				<aside class="indexAside">
+				<aside class="indexAside" id="highestRanked">
 					<h3>המבוקש</h3>
 				</aside>
 				<div id="target" class="crop"></div>
