--- a/main.html
+++ b/main.html
@@ -89,13 +89,13 @@
 					<a href="#" class="myButton">שנה מיקום</a>
 				</div>
 				<h1 class="pageName">קרובים קרובים</h1>
-				<aside class="indexAside">
+				<!--<aside class="indexAside">
 					<h3>המבוקש</h3>
 					<h1 id="placeName"></h1>
 					<h3 id="placeType"></h3>
 					<div id="placePic" class="crop"></div>
 					<p id="asideDescription"></p>
-				</aside>
+				</aside>-->
 					<select class="filterTags" id="chooseTag" onchange="addTag(this)"></select>
 					<div id="tags"></div>
 				</div>
