--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
 		<script src="http://underscorejs.org/underscore.js" defer></script>
 		<script src="includes/main.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
+        <script src="includes/changePosition.js"></script>
+
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
@@ -86,12 +89,16 @@
 			 	<div class="filterBox">
 				 	<div id="filterTarget"></div>
 				 	<div id="filterMusicTarget"></div>	
-					<a href="#" class="myButton">שנה מיקום</a>
+					<a id="changePosition" href="#" class="myButton">שנה מיקום</a>
+                    <div id="changePositionField">
+                        <input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required>
+                    </div>
+
 				</div>
 				<h1 class="pageName">קרובים קרובים</h1>
 				<aside id="indexAside">
 					<h3>המבוקש</h3>
-					<h4 id="placeName"></h1>
+					<h4 id="placeName"></h4>
 					<h3 id="placeType"></h3>
 					<div id="placePic" class="crop"></div>
 					<p id="asideDescription"></p>
