--- a/myPage.html
+++ b/myPage.html
@@ -48,6 +48,9 @@
 				
 				<div id="myPageTarget"></div>
 
+                <h1>הניקוד שלי:</h1>
+                <h1 id="myscore"></h1>
+
 
                 <h3>מקומות שלי:</h3>
                 <div id="myplaces" style="color:white">
