--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facebook Login JavaScript Example</title>
+	<title>FuNights Login</title>
 	<meta charset="UTF-8">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="includes/main.js"></script>
 	<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
+    <link rel="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="includes/navBar.css">
+    <link rel="stylesheet" href="includes/funights.css">
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=405245006352397";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
@@ -93,11 +104,9 @@ $(document).on(
   the FB.login() function when clicked.
 -->
 
-<button id="fblogin">facebook</button>
-
-<fb:login-button scope="public_profile,email" onlogin="login();">
-</fb:login-button>
-
+<!--<button id="fblogin">facebook</button>-->
+<a href="#" id="fblogin"><img src="images/FBloginbutton.png"></a>
+<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="true" data-auto-logout-link="false" data-mobile="1" data-colorscheme="dark"></div>
 <div id="status">
 </div>
 
