--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
 					<ul>
 					   <li class='active'><a href='#'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>Specials</span></a></li>
+					   <li><a href='#'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class='last'><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
