--- a/myPage.html
+++ b/myPage.html
@@ -37,7 +37,7 @@
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>Specials</span></a></li>
+					   <li><a href='#'><span>לוח ניקוד</span></a></li>
 					   <li><a href='#'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
@@ -45,6 +45,9 @@
 		 		</nav>
 			 <main>
 			 	
+			 	<div id="myPageTarget"></div>
+                <h1>הניקוד שלי:</h1>
+                <h1 id="myscore"></h1>
 				<div id='myPage'>
 					<div id="myPageTarget"></div>
 	                <h2 class='myPlaces'>מקומות שלי:</h2>
@@ -52,7 +55,7 @@
 					<h2>מקומות אחרונים:</h2>
 					<div id="checkins" style="color:white"></div>
 				</div>
-
+					
 			 </main>
 		 
 		 	<script src="includes/mypage.js"></script>
