--- a/myPage.html
+++ b/myPage.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
+		<link rel="stylesheet" href="includes/tagsStyle.css">
 	</head>
 	<body>	 
 		
@@ -38,7 +39,7 @@
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
 					   <li><a href='#'><span>לוח ניקוד</span></a></li>
-					   <li><a href='#'><span>העמוד שלי</span></a></li>
+					   <li class='active'><a href='#'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
 			 		<span></span>
@@ -46,11 +47,11 @@
 			 <main>
 			 	
 			 	<div id="myPageTarget"></div>
-                <h1>הניקוד שלי:</h1>
+                <h2 class="myScoreH">הניקוד שלי:</h2>
                 <h1 id="myscore"></h1>
-				<div id='myPage'>
+				<div id= "myPage">
 					<div id="myPageTarget"></div>
-	                <h2 class='myPlaces'>מקומות שלי:</h2>
+	                <h2 >מקומות שלי:</h2>
 	                <div id="myplaces"></div>
 					<h2>מקומות אחרונים:</h2>
 					<div id="checkins" style="color:white"></div>
