--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@ $(document).on(
 -->
 
 <!--<button id="fblogin">facebook</button>-->
-<a href="#" id="fblogin"><img src="images/FBloginbutton.png"></a>
+<div class="fb-buttonIndex">
+<h2>התחבר:</h2>	
+<a href="#" id="fblogin"><img src="images/connect-facebook-button.png"></a>
 <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="true" data-auto-logout-link="false" data-mobile="1" data-colorscheme="dark"></div>
-<div id="status">
+<div id="status"></div>
 </div>
-
 </body>
 </html>
