change picture size

--- a/aboutus.html
+++ b/aboutus.html
@@ -45,7 +45,7 @@
 			 		<br>
 			 		מיכל וליטל
 			 	</p>
-			 	<img class="kissImage" src= "images/kiss.gif">
+			 	<img class="kissImage" src= "images/kiss1.gif">
 
 			 </main>
 		 
