--- a/placePage.html
+++ b/placePage.html
@@ -73,7 +73,7 @@
 			
 
 				<div class="faceStyle">
-					<div class="fb-comments" data-width="100%" data-numposts="10" data-mobile = "1" data-colorscheme="dark"></div>
+					<div data-colorscheme="dark" class="fb-comments" data-width="100%" data-numposts="10" data-mobile="1"></div>
 				</div>	
 			 </main>
 		 
