--- a/myPage.html
+++ b/myPage.html
@@ -49,6 +49,9 @@
 			 	<div id="myPageTarget"></div>
                 <h2 class="myScoreH">הניקוד שלי:</h2>
                 <h1 id="myscore"></h1>
+				<h2 class="myScoreH">הסטטוס שלי:</h2>
+                <h1 id="mystatus"></h1>
+                
 				<div id= "myPage">
 					<div id="myPageTarget"></div>
 					<h2>מקומות אחרונים:</h2>
