--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="includes/style.css">
     <link rel="stylesheet" href="includes/navBar.css">
     <link rel="stylesheet" href="includes/funights.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="fb-root"></div>
