--- a/placePage.html
+++ b/placePage.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
 		<link rel="stylesheet" href="includes/tagsStyle.css">
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>	 
 		<div id="fb-root"></div>
