--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ $(document).on(
 
 <!--<button id="fblogin">facebook</button>-->
 	<div class="connectIndex">
-		<img class="connectIndexImage" src="images/logo4.png"/>
+		<img class="connectIndexImage" src="images/funights.png"/>
 		<h2>התחבר:</h2>	
 		<a href="#" id="fblogin"><img src="images/connect-facebook-button.png"></a>
 		<div id="status"></div>
