accept only images on upload image

--- a/add.html
+++ b/add.html
@@ -67,11 +67,11 @@
 							<div><label class="categoryP">שם המקום:	</label><input id="placeName" type="text"   name="placeName"	value="" required></div>
 							<div><label class="categoryP">סגנון בילוי:	</label><div   id="placeType" class="formFilter"></div></div><br>
 							<div><label class="categoryP">סגנון מוזיקה:</label><div id="musicGenere" class="formFilter"></div></div><br>
-							<div><label class="categoryP">כתובת:	</label><input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required></input></div><br>
+							<div><label class="categoryP">כתובת:	</label><input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required></div><br>
 						</div>
 						<div class= "leftSideForm">
 							<div><label class="categoryP">תיאור:	</label><textarea id="placeDescription" name="description" rows="5" cols="20" required></textarea></div>
-							<div><label class="categoryP">תמונה:</label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
+							<div><label class="categoryP">תמונה:</label><input id="upload" type="file" name="image" required accept="image/*"><div id="fileDisplayArea"></div></div>
 							<div><label class="categoryP">&nbsp;</label><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
 						</div>
 					</form>
