board score - need DESIGN

--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>לוח ניקוד</span></a></li>
+					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
@@ -50,7 +50,5 @@
 
 			 </main>
 		 
- 		<script src="includes/parse_main.js"></script>
-
 	</body>
 </html>
