--- a/add.html
+++ b/add.html
@@ -53,7 +53,7 @@
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li class='active'><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>לוח ניקוד</span></a></li>
+					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class='last'><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
 					</ul>
