--- a/placePage.html
+++ b/placePage.html
@@ -35,7 +35,7 @@
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>לוח ניקוד</span></a></li>
+					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
 					</ul>
