--- a/myPage.html
+++ b/myPage.html
@@ -45,12 +45,13 @@
 			 		<span></span>
 		 		</nav>
 			 <main>
-			 	
-			 	<div id="myPageTarget"></div>
-                <h2 class="myScoreH">הניקוד שלי:</h2>
-                <h1 id="myscore"></h1>
-				<h2 class="myScoreH">הסטטוס שלי:</h2>
-                <h1 id="mystatus"></h1>
+			 	<div class= "profile" >
+				 	<div id="myPageTarget"></div>
+	                <div><h2 class="myScoreH">הניקוד שלי:</h2>
+	                <h3 id="myscore"></h3></div>
+					<div><h2 class="myScoreH">הסטטוס שלי:</h2>
+	                <h3 id="mystatus"></h3></div>
+                </div>
                 
 				<div id= "myPage">
 					<div id="myPageTarget"></div>
