--- a/myPage.html
+++ b/myPage.html
@@ -47,18 +47,18 @@
 			 <main>
 			 	<div class= "profile" >
 				 	<div id="myPageTarget"></div>
-	                <div><h2 class="myScoreH">הניקוד שלי:</h2>
-	                <h3 id="myscore"></h3></div>
-					<div><h2 class="myScoreH">הסטטוס שלי:</h2>
-	                <h3 id="mystatus"></h3></div>
+	                <h2 class="myScoreH">הניקוד שלי:</h2>
+	                <h3 id="myscore"></h3>
+					<h2 class="myScoreH">הסטטוס שלי:</h2>
+	                <h3 id="myStatus"></h3>
                 </div>
                 
 				<div id= "myPage">
-					<div id="myPageTarget"></div>
 					<h2>מקומות אחרונים:</h2>
 					<div id="checkins" style="color:white"></div>
+		
 					<h2 >מקומות שלי:</h2>
-	                <div id="myplaces"></div>
+	                <div id="lastPlaces"></div>
 				</div>
 					
 			 </main>
