--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
+		<link rel="stylesheet" href="includes/tagsStyle.css">
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
@@ -23,17 +24,28 @@
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='#'><span>לוח ניקוד</span></a></li>
+					   <li class= "active"><a href='#'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
 					   <li class="last"><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
 					</ul>
 			 		<span></span>
 		 		</nav>
 			 <main>
-                <div id="scores">
-
+			 	<h1 class="Top5">החמישייה הפותחת</h1>
+                <div id="scores"></div>
+                <h2 class="orange">איך אני מרוויח נקודות? </h2>
+                <div class = "linksToAddPoints">
+                	<div class= "line"><h4>לחץ למעבר לעמוד</h4><div class= "links" id="QuyA0rDRTB"><a href='add.html'>הוספת מקום=20</a></div></div>
+                	<br>
+                	<h4>לביצוע מעמוד מקום</h4>
+                	<div class= "line"><div class= "links" id="ZBRSWnsR0M">הוספת תמונה למקום=15	</div></div>
+                	<div class= "line"><div class= "links" id="HdXKkubkuY">like=10			</div>
+		        					   <div class= "links" id="KW4r8lcFjW">comment=10		</div></div>
+		        	<div class= "line"><div class= "links" id="rxCTZuwnfH">דירוג  =5    		</div>
+			        				   <div class= "links" id="EIZhxy7kbM">סימון שהגעתי=5		</div>
+			        				   <div class= "links" id="VV8VJ41YEZ">הוספת והסרת תגית=5  </div></div>
                 </div>
-			 </main>
+			 </main
 		 
         </div>
         <script src="includes/score.js"></script>
