--- a/main.html
+++ b/main.html
@@ -83,6 +83,7 @@
 					<button class="logout" onclick="logout();"></button>
 					<div class="myName"></div>
 				</div>
+				<div id="helloUser">שלום משתמש</div>
  			</header>		
 		 		<nav id="cssmenu">
 					<ul>
