--- a/support.html
+++ b/support.html
@@ -16,8 +16,10 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
+				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
+					<button class="logout" onclick="logout();"></button>
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
