--- a/myPage.html
+++ b/myPage.html
@@ -15,7 +15,12 @@
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>	 
-		
+		<script type="text/html" id='myProfile'>
+			<div class="placeprivate">
+               	<h1 class="myName"><%= item.get("displayName") %> </h1>
+				<img src='http://graph.facebook.com/<%= item.get("facebookId")%>/picture?type=normal'/>   
+			</div>
+        </script>
 		<script type="text/html" id='myPageId'>
 				
 	
@@ -33,8 +38,10 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
+				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
+					<button class="logout" onclick="logout();"></button>
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
@@ -62,8 +69,8 @@
 				</div>
 					
 			 </main>
-		 
-		 	<script src="includes/mypage.js"></script>
+		</div>
+	 	<script src="includes/mypage.js"></script>
 
 	</body>
 </html>
