--- a/placePage.html
+++ b/placePage.html
@@ -15,6 +15,12 @@
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>	 
+		<script type="text/html" id='myProfile'>
+			<div class="placeprivate">
+               	<h1 class="myName"><%= item.get("displayName") %> </h1>
+				<img src='http://graph.facebook.com/<%= item.get("facebookId")%>/picture?type=normal'/>   
+			</div>
+        </script>
 		<div id="fb-root"></div>
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
@@ -30,8 +36,10 @@
 		<div id="wrapper">
 			<header> 
 				<a id="logo" href="main.html"> </a>
+				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
+					<button class="logout" onclick="logout();"></button>
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
