--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -24,6 +24,7 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
+				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
 					<ul>
