--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -27,6 +27,7 @@
 				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
+		 			<button class="logout" onclick="logout();"></button>
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
