--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 				<div id="helloUser"></div>
  			</header>		
 		 		<nav id="cssmenu">
-					<button class="logout" onclick="logout();"></button>
+					<button class="logout2" onclick="logout();"></button>
 					<ul>
 					   <li class='active'><a href='#'><span>קרובים קרובים</span></a></li>
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
