--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -49,9 +49,17 @@
                 	<div class= "line"><div class= "links" id="HdXKkubkuY">like=10			</div>
 		        					   <div class= "links" id="KW4r8lcFjW">comment=10		</div></div>
 		        	<div class= "line"><div class= "links" id="rxCTZuwnfH">דירוג  =5    		</div>
-			        				   <div class= "links" id="EIZhxy7kbM">סימון שהגעתי=5		</div>
+			        				   <div class= "links" id="EIZhxy7kbM">סימון 'אני כאן'=5		</div>
 			        				   <div class= "links" id="VV8VJ41YEZ">הוספת והסרת תגית=5  </div></div>
-                </div>
+           		 </div>
+       			 <h2 class    ="orange2">הסטטוסים: </h2>
+       			 <div class   ="stats">
+           			 <p class = "status1">בליין?!  </p>
+           			 <p class = "status2">בליין מתחיל</p>
+           			 <p class = "status3">בליין ממוצע</p>
+           			 <p class = "status4">בליין מטורף</p>
+       			</div>
+           		 
 			 </main
 		 
         </div>
