--- a/placePage.html
+++ b/placePage.html
@@ -56,8 +56,8 @@
 					<div id="placePagePic" class="crop"></div>
 					<p id="description"></p>
 					<form method="post" id="add-image">
-						<div><label class="categoryP"></label><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
-						<div><label class="categoryP">&nbsp;</label><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
+						<div><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
+						<div><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
 					</form>
 					<select class="filterTags" id="chooseTag" onchange="addTag(this)"></select>
 					<div id="tags"></div>
