--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 		<script src="http://underscorejs.org/underscore.js"></script>
+		<script src="includes/main.js"></script>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
@@ -32,7 +33,7 @@
 					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
 					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
 					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
-					   <li class="last"><span></span><a href='#'><span>קצת עלינו</span></a></li>
+					   <li class="last active"><span></span><a href='#'><span>קצת עלינו</span></a></li>
 					</ul>
 			 		<span></span>
 		 		</nav>
@@ -58,5 +59,6 @@
 
 			 </main>
 		</div>
+		<script src="includes/parse_main.js" defer></script>
 	</body>
 </html>
