--- a/add.html
+++ b/add.html
@@ -9,8 +9,10 @@
 		<script src="includes/main.js"></script>
 		<script src="includes/add.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
+		<script src="jq/ui/jquery-ui.js"></script>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
+		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
@@ -85,5 +87,11 @@
 		
   			</main>
 		</div>
+		
+	<div id="dialog" title="Dialog Title">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	</div>
+
+		<script src="includes/parse_main.js"></script>
 	</body>
 </html>
