--- a/myPage.html
+++ b/myPage.html
@@ -71,6 +71,7 @@
 			 </main>
 		</div>
 	 	<script src="includes/mypage.js"></script>
+	 	<script src="includes/parse_main.js"></script>
 
 	</body>
 </html>
