--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -38,10 +38,10 @@
 			 		<span></span>
 		 		</nav>
 			 <main>
-			 	<h1 class="Top5">החמישייה הפותחת</h1>
-                <div id="scores"></div>
-                <h2 class="orange">איך אני מרוויח נקודות? </h2>
-                <div class = "linksToAddPoints">
+			 	<h1 class ="Top5">החמישייה הפותחת</h1>
+                <div id   ="scores"></div>
+                <h2 class ="orange">איך אני מרוויח נקודות? </h2>
+                <div class= "linksToAddPoints">
                 	<div class= "line"><h4>לחץ למעבר לעמוד</h4><div class= "links" id="QuyA0rDRTB"><a href='add.html'>הוספת מקום=20</a></div></div>
                 	<br>
                 	<h4>לביצוע מעמוד מקום</h4>
@@ -60,9 +60,10 @@
            			 <p class = "status4">בליין מטורף</p>
        			</div>
            		 
-			 </main
+			 </main>
 		 
         </div>
         <script src="includes/score.js"></script>
+        <script src="includes/parse_main.js"></script>
     </body>
 </html>
