--- a/placePage.html
+++ b/placePage.html
@@ -51,13 +51,16 @@
 		 		</nav>
 			 <main>
 				<div id="placeTarget">
-					<h1 id="placePageName"></h1>
-					<h3 id="placePageType"></h3>
-					<div id="placePagePic" class="crop"></div>
-					<p id="description"></p>
+					<h1  id = "placePageName"></h1>
+					<h3  id = "placePageType"></h3>
+					<div id = "placePagePic" class="crop"></div>
+					<p   id = "description"></p>
+					<p class = "addresses">כתובת:</p>
+					<p   id = "address"></p>
+					<p   id = "distance"></p>
 					<form method="post" id="add-image">
-						<div><input id="upload" type="file" name="image" required><div id="fileDisplayArea"></div></div>
-						<div><input type="submit" name="btn" class="addBtn" value="+הוסף"></div>
+						<div><input id="upload" type="file" name="image" required> <div id="fileDisplayArea"></div></div>
+						<div><input type="submit" name="btn" class="myLabel" value="+הוסף"></div>
 					</form>
 					<select class="filterTags" id="chooseTag" onchange="addTag(this)"></select>
 					<div id="tags"></div>
@@ -88,6 +91,7 @@
 			 </main>
 		 
 		 	<script src="includes/place.js"></script>
+		 	<script src="includes/parse_main.js"></script>
 		</div>
 	</body>
 </html>
