--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -52,7 +52,7 @@
 			        				   <div class= "links" id="EIZhxy7kbM">סימון 'אני כאן'=5		</div>
 			        				   <div class= "links" id="VV8VJ41YEZ">הוספת והסרת תגית=5  </div></div>
            		 </div>
-       			 <h2 class    ="orange2">הסטטוסים: </h2>
+       			 <h2 class    ="orange">הסטטוסים שלנו: </h2>
        			 <div class   ="stats">
            			 <p class = "status1">בליין?!  </p>
            			 <p class = "status2">בליין מתחיל</p>
