--- a/add.html
+++ b/add.html
@@ -27,7 +27,7 @@
 			<select class="fil" id="placeSelect" required>
 				<div class="filter"></div>
 				
-					<option value="">▼ סנן לפי סוג</option>
+					<option value="">סנן לפי סוג</option>
 					<% _.each(items,function(item,key,list){ 
 			            // create more variables
 			        %>
@@ -42,7 +42,7 @@
 		<script type="text/html" id='musicGenereList'>
 			<select class="fil" id="musicSelect" required>
 				
-				<option value="">▼ סנן לפי מוסיקה</option>
+				<option value="">סנן לפי מוסיקה</option>
 				<% _.each(items,function(item,key,list){ 
 		            // create more variables
 		        %>
