--- a/placePage.html
+++ b/placePage.html
@@ -89,7 +89,7 @@
 			
 
 				<div class="faceStyle">
-					<div data-colorscheme="dark" class="fb-comments" data-width="100%" data-numposts="10" data-mobile="1"></div>
+					<div class="fb-comments" data-colorscheme="dark" data-width="100%" data-numposts="10" data-mobile="1"></div>
 				</div>	
 			 </main>
 		 
