--- a/add.html
+++ b/add.html
@@ -9,6 +9,7 @@
 		<script src="includes/main.js"></script>
 		<script src="includes/add.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
+		<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<script src="jq/ui/jquery-ui.js"></script>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
