--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -7,6 +7,7 @@
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 		<script src="http://underscorejs.org/underscore.js"></script>
         <script src="includes/main.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
