--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
 		<script src="http://underscorejs.org/underscore.js" defer></script>
 		<script src="includes/main.js"></script>
-		<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
         <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
         <script src="includes/changePosition.js"></script>
+
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
 		<link rel="stylesheet" href="includes/funights.css">
@@ -79,7 +79,7 @@
 				 	<div id="filterMusicTarget"></div>	
 					<a id="changePosition" href="#" class="myButton">שנה מיקום</a>
                     <div id="changePositionField"> 
-                        <input id="autocomplete" class="changeAddress" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required>
+                        <input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required>
                     </div>
 				</div>
 				
