--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
 				 	<div id="filterMusicTarget"></div>	
 					<a id="changePosition" href="#" class="myButton">שנה מיקום</a>
                     <div id="changePositionField"> 
-                        <input id="autocomplete" class="formFilter" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required>
+                        <input id="autocomplete" class="changeAddress" placeholder="בחר כתובת " onFocus="geolocate()" type="text" required>
                     </div>
 				</div>
 				
