--- a/placePage.html
+++ b/placePage.html
@@ -3,6 +3,7 @@
 	<head>
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
+		<script src="jq/ui/jquery-ui.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 		<script src="http://underscorejs.org/underscore.js"></script>
