--- a/add.html
+++ b/add.html
@@ -40,7 +40,7 @@
           </script>
 		
 		<script type="text/html" id='musicGenereList'>
-			<select class="fil" id="musicSelect" required>
+			<select class="fil" id="filterMusicList" required>
 				
 				<option value="">סנן לפי מוסיקה</option>
 				<% _.each(items,function(item,key,list){ 
